# eve-market-tools

./: .dockerignore  .gitignore  CLAUDE.md  COMMANDS.md  Dockerfile  LP-Scanner.bat  PARITY.md  README.md  arb_core.py  docker-compose.yml  eve-scanner.py  exploration.py  ind_core.py  lp-scanner.py  lp-web.py  lp_core.py  pg_migrations.py  pg_store.py  railway.toml  requirements.txt  sso_core.py
.githooks/: pre-commit
backend/: Dockerfile.dev  arb_core.py  ind_core.py  lp_core.py  pyproject.toml  sso_core.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/core/arbitrage/: enrichment.py  scanner.py  spreads.py
backend/app/core/esi/: character.py  client.py
backend/app/core/industry/: blueprints.py  costs.py  detail.py  evaluate.py  invention.py  sde.py
backend/app/core/lp/: detail.py  evaluate.py  liquidity.py  offers.py
backend/app/core/market/: history.py  orders.py  prices.py
backend/app/core/shared/: __init__.py  cache.py  constants.py  names.py
backend/app/core/sso/: pkce.py  scopes.py  tokens.py
backend/app/middleware/: rate_limit.py  security_headers.py
backend/app/models/: __init__.py  character.py  session.py  user.py  user_settings.py
backend/app/routers/: arbitrage.py  auth.py  character.py  industry.py  lp.py  settings.py
backend/app/services/: auth_service.py
backend/app/utils/: encryption.py
frontend/: Dockerfile.dev  package-lock.json  package.json
static/: index.html  style.css
tests/: conftest.py  test_abyss.py  test_arb_cache_persist.py  test_arb_fuzzwork.py  test_arb_params.py  (+35 more)
(+34 files in other folders)
